{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 8,
  "lineage": "36eee873-d1ea-7b40-de8c-f81950c6ba75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aebec83a182ea7ea",
            "arn": "arn:aws:ec2:ap-south-1:221082174974:instance/i-08a1c29a54a2adeb8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a1c29a54a2adeb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cherrykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c0bf9dd1be3195ec",
            "private_dns": "ip-10-0-0-22.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.22",
            "public_ip": "3.108.59.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b164a8b73f1f682",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d36148074ec84c07",
            "tags": {
              "Name": "projectk-ec2"
            },
            "tags_all": {
              "Name": "projectk-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5387aaa8828e61a"
            ]
          },
          "dependencies": [
            "aws_security_group.sowmya-sg",
            "aws_subnet.sowmya-subnet",
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sowmya-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221082174974:internet-gateway/igw-0e8b857cca3bd9935",
            "id": "igw-0e8b857cca3bd9935",
            "owner_id": "221082174974",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-008df3147aaa8bb0b"
          },
          "dependencies": [
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sowmya-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221082174974:route-table/rtb-0cb0a75eae6a56eab",
            "id": "rtb-0cb0a75eae6a56eab",
            "owner_id": "221082174974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8b857cca3bd9935",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "projectk-rt"
            },
            "tags_all": {
              "Name": "projectk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008df3147aaa8bb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sowmya-ig",
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sowmya-rt-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dca4cd28ac87342d",
            "route_table_id": "rtb-0cb0a75eae6a56eab",
            "subnet_id": "subnet-0d36148074ec84c07"
          },
          "dependencies": [
            "aws_internet_gateway.sowmya-ig",
            "aws_route_table.sowmya-route",
            "aws_subnet.sowmya-subnet",
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sowmya-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221082174974:security-group/sg-0f5387aaa8828e61a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5387aaa8828e61a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "221082174974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-projectk"
            },
            "tags_all": {
              "Name": "sg-projectk"
            },
            "timeouts": null,
            "vpc_id": "vpc-008df3147aaa8bb0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sowmya-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221082174974:subnet/subnet-0d36148074ec84c07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d36148074ec84c07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082174974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "projectk-subnet"
            },
            "tags_all": {
              "Name": "projectk-subnet"
            },
            "vpc_id": "vpc-008df3147aaa8bb0b"
          },
          "dependencies": [
            "aws_vpc.sowmya_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sowmya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:221082174974:vpc/vpc-008df3147aaa8bb0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02eab873456b8df",
            "default_route_table_id": "rtb-004ab2ad5f16ded7e",
            "default_security_group_id": "sg-0d75811b0fd8d8765",
            "dhcp_options_id": "dopt-0002b5bbdc7f8c1df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008df3147aaa8bb0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004ab2ad5f16ded7e",
            "owner_id": "221082174974",
            "tags": {
              "Name": "projectk-vpc"
            },
            "tags_all": {
              "Name": "projectk-vpc"
            }
          }
        }
      ]
    }
  ]
}